--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -30,13 +30,16 @@
     "react-dom": "^18.2.0",
     "react-markdown": "^10.0.0",
     "react-plotly.js": "^2.6.0",
-    "react-router-dom": "^7.4.1",
+    "react-router-dom": "^7.5.2",
     "react-syntax-highlighter": "^15.6.1",
     "react-uuid": "^2.0.0",
     "rehype-raw": "^7.0.0",
     "remark-gfm": "^4.0.0",
     "remark-supersub": "^1.0.0",
     "undici": "^5.29.0"
+  },
+  "overrides": {
+    "form-data": "4.0.4"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.1",
